--- a/website/netlify.toml
+++ b/website/netlify.toml
@@ -3,7 +3,7 @@
   command = "npm run build"
 
   # The directory that contains the build output
-  publish = "dist/"
+  publish = "/dist/"
 
   # The directory that contains the source files for your project
   base = "/"
